dh-python (5.20211217) UNRELEASED; urgency=medium

  * Ignore environment markers for Python 2.7, our logic is specific to 3.x.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 17 Dec 2021 11:40:23 -0400

dh-python (5.20211216) unstable; urgency=medium

  * Use a consistent distribution name regexp to handle dashed names
    correctly, thanks Nicolas Dandrimont.
  * Un-constrain python_version constraints where the minimum version is < 3.
  * Ignore python_version constraints where the maximum version is < 3.
    (closes: 1001799)

 -- Stefano Rivera <stefanor@debian.org>  Thu, 16 Dec 2021 12:39:55 -0400

dh-python (5.20211214) unstable; urgency=medium

  * Fix a bug in dist-info extra section parsing, thanks Stuart Prescott.
  * Remove LICENSE.md from dist-info, as well as LICENSE.

 -- Stefano Rivera <stefanor@debian.org>  Tue, 14 Dec 2021 18:31:53 -0400

dh-python (5.20211213) unstable; urgency=medium

  [ Stefano Rivera ]
  * Document that pybuild --name overrides --dest-dir.
  * Use Python 3 examples in the manpage, thanks Louis-Philippe Véronneau.
  * Handle dist-info extra sections the same way we do for requirements.txt.
    (closes: 998374)
  * Add support for environment markers.
    (closes: 815654, 834133, 922468, 978686)
  * Expand on --depends-section=SECTION and similar in dh_python3(1), and
    mention multiple use.
  * Port to python3-tomli (following the PyPA projects).

  [ Piotr Ożarowski ]
  * dh_python3: Remove duplicate .abi3.so public extension even if it differs
    from the one generated by previous interpreter

  [ Stefano Rivera ]
  * Add new pep517 plugin that uses python3-build + python3-installer to build
    Python modules as wheels and then unpack the wheel. This is the new
    interface used by modern Python packaging tools. (Closes: #984824)
    - The plugin is still in beta, so other plugins will be used in preference
      to it, unless explicitly specified.